<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/app">
        <Preference
            android:key="clear_cache"
            android:summary="@string/set_current_cache"
            android:title="@string/set_clear_cache"/>
        <SwitchPreference
            android:defaultValue="false"
            android:summary="@string/set_original_splash"
            android:key="original_splash"
            android:title="@string/original_splash"/>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/action_about">
        <SwitchPreference
            android:key="check_version"
            android:defaultValue="true"
            android:title="@string/set_check_version"/>
        <Preference
            android:key="feedback"
            android:summary="@string/set_post_feedback"
            android:title="@string/set_feedback"/>
    </PreferenceCategory>
</PreferenceScreen>