<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_knowledge"
            android:title="@string/nva_knowledge"/>
        <item
            android:id="@+id/nav_beauty"
            android:title="@string/nav_beauty"/>
        <item
            android:id="@+id/nav_secret_mode"
            android:title="@string/nav_secret_mode"/>

    </group>

    <item android:title="@string/app">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/nav_share"/>
            <item
                android:id="@+id/nav_setting"
                android:title="@string/nav_setting"/>
        </menu>
    </item>

</menu>
