<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_knowledge"
            android:title="@string/nva_knowledge"/>
        <item
            android:id="@+id/nav_beauty"
            android:title="@string/nav_beauty"/>
    </group>

    <item android:title="@string/app">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/nav_share"/>
            <item
                android:id="@+id/nav_setting"
                app:actionLayout="@layout/custom_menu_item"
                app:showAsAction="never"
                android:title="@string/nav_setting"/>
        </menu>
    </item>

</menu>
